--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,14 @@
 spring:
+  config:
+    import: file:.env[.properties]
   security:
     enabled: false #to remove
   application:
     name: ecommerce-backend
   datasource:
     url: jdbc:postgresql://localhost:5432/ecommerce
-    username: postgres
-    password: postgres
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
     type: com.zaxxer.hikari.HikariDataSource
   jpa:
