--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,15 @@
+server:
+  port: 8190
+  servlet:
+    context-path: /ecommerce
+
 spring:
   config:
     import: file:.env[.properties]
-  security:
-    enabled: false #to remove
   application:
     name: ecommerce-backend
   datasource:
-    url: jdbc:postgresql://localhost:5432/ecommerce
+    url: ${DB_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
