--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@ mapstructVersion=1.6.3
 openapiGeneratorVersion=7.11.0
 lombokMapstructBindingVersions=0.2.0
 springDocOpenApiVersion=2.8.4
+jwtVersion=0.12.6
 org.gradle.warning.mode=none
