--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,5 @@ openapiGeneratorVersion=7.11.0
 lombokMapstructBindingVersions=0.2.0
 springDocOpenApiVersion=2.8.4
 jwtVersion=0.12.6
+restAssuredVersion=5.5.1
 org.gradle.warning.mode=none
