--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,3 +2,5 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+  flyway:
+    locations: classpath:db/migration,classpath:db/test-migration
